Update to 1.21.6/7/8