@@ -4,7 +4,7 @@ import com.bacco.event.KeyInputHandler;
 import com.google.common.reflect.TypeToken;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.opengl.GlStateManager;
 import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
@@ -12,6 +12,7 @@ import net.fabricmc.fabric.api.client.item.v1.ItemTooltipCallback;
 import net.fabricmc.fabric.api.client.networking.v1.ClientPlayConnectionEvents;
 import net.minecraft.block.Blocks;
 import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.client.texture.GlTexture;
 import net.minecraft.client.texture.Sprite;
 import net.minecraft.item.Items;
 import net.minecraft.registry.Registries;
@@ -234,17 +235,17 @@ public class MCRGBClient implements ClientModInitializer {
 	public void RefreshColours(){
 		if (client == null) return;
 		//get top sprite of stone block default state
-		var defSprite = client.getBakedModelManager().getBlockModels().getModel(Blocks.STONE.getDefaultState()).getQuads(Blocks.STONE.getDefaultState(), Direction.UP, Random.create()).get(0).getSprite();
+		var defSprite = client.getBakedModelManager().getBlockModels().getModel(Blocks.STONE.getDefaultState()).getParts(Random.create()).get(0).getQuads(Direction.UP).getFirst().sprite();
 		//get id of the atlas containing above
 		var atlas = defSprite.getAtlasId();
 		//use atlas id to get OpenGL ID. Atlas contains ALL blocks
-		int glID = client.getTextureManager().getTexture(atlas).getGlId();
+		GlTexture glTexture = (GlTexture) client.getTextureManager().getTexture(atlas).getGlTexture();
 		//get width and height from OpenGL by binding texture
-		RenderSystem.bindTexture(glID);
-		int width = GL11.glGetTexLevelParameteri(GL11.GL_TEXTURE_2D, 0, GL11.GL_TEXTURE_WIDTH);
-		int height = GL11.glGetTexLevelParameteri(GL11.GL_TEXTURE_2D, 0, GL11.GL_TEXTURE_HEIGHT);
+		int width = glTexture.getWidth(0);
+		int height = glTexture.getHeight(0);
 		int size = width * height;
 		//Make byte buffer and load full atlas into buffer.
+		GlStateManager._bindTexture(glTexture.getGlId());
 		ByteBuffer buffer = BufferUtils.createByteBuffer(size*4);
 		GL11.glGetTexImage(GL11.GL_TEXTURE_2D, 0, GL11.GL_RGBA, GL11.GL_UNSIGNED_BYTE, buffer);
 		//convert buffer to an array of bytes
@@ -262,13 +263,13 @@ public class MCRGBClient implements ClientModInitializer {
 			
 			block.getStateManager().getStates().forEach(state -> {
 				try{
-					var model = client.getBakedModelManager().getBlockModels().getModel(state);						
-					sprites.add(model.getQuads(state, Direction.UP, Random.create()).get(0).getSprite());
-					sprites.add(model.getQuads(state, Direction.DOWN, Random.create()).get(0).getSprite());
-					sprites.add(model.getQuads(state, Direction.NORTH, Random.create()).get(0).getSprite());
-					sprites.add(model.getQuads(state, Direction.SOUTH, Random.create()).get(0).getSprite());
-					sprites.add(model.getQuads(state, Direction.EAST, Random.create()).get(0).getSprite());
-					sprites.add(model.getQuads(state, Direction.WEST, Random.create()).get(0).getSprite());
+					var model = client.getBakedModelManager().getBlockModels().getModel(state);
+					sprites.add(model.getParts(Random.create()).getFirst().getQuads(Direction.UP).get(0).sprite());
+					sprites.add(model.getParts(Random.create()).getFirst().getQuads(Direction.DOWN).get(0).sprite());
+					sprites.add(model.getParts(Random.create()).getFirst().getQuads(Direction.NORTH).get(0).sprite());
+					sprites.add(model.getParts(Random.create()).getFirst().getQuads(Direction.SOUTH).get(0).sprite());
+					sprites.add(model.getParts(Random.create()).getFirst().getQuads(Direction.EAST).get(0).sprite());
+					sprites.add(model.getParts(Random.create()).getFirst().getQuads(Direction.WEST).get(0).sprite());
 					successes +=1;
 				}catch(Exception e){	
 					fails +=1;						
